--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,2 @@
-# Core Flask & dependencies (latest as of early 2026)
-Flask>=3.1.3
-Werkzeug>=3.1.3          # Flask 3.1 ke saath required, security & performance fixes
-Jinja2>=3.1.5             # Template engine, latest safe version (Flask dependency)
-itsdangerous>=2.2.0       # Session signing, latest
-click>=8.1.8              # CLI, latest
-blinker>=1.9.0            # Signals, latest
-
-# Authentication & DB
-Flask-Login>=0.6.3        # Latest stable (Oct 2023 release, but still maintained & compatible with Flask 3.x)
-Flask-SQLAlchemy>=3.1.1   # Latest (supports SQLAlchemy 2.x internally)
-
-# Utilities
-requests>=2.32.3          # HTTP client, security updates
-
-# Production server (Render/Heroku ke liye best)
-gunicorn>=23.0.0          # Latest major (2025-2026), better worker handling & async support
-
-# Optional but recommended for production/debug
-python-dotenv>=1.0.1      # .env files load karne ke liye (env vars manage karne mein help)
+Flask==2.3.6
+Werkzeug==2.3.6
