--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Flask>=2.2.5,<2.4
-Werkzeug>=2.2.5,<2.4
-itsdangerous>=2.1.2,<3.0
-Jinja2>=3.1.2,<4.0
-click>=8.1.3,<9.0
+Flask
+Werkzeug
+itsdangerous
+Jinja2
+click
