--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-Flask
-Werkzeug
-itsdangerous
-Jinja2
-click
+Flask>=2.2.5,<3.0
+Werkzeug>=2.2.5,<3.0
+itsdangerous>=2.1.2,<3.0
+Jinja2>=3.1.2,<4.0
+click>=8.1.3,<9.0
+gunicorn
